# vk_d3d12_study

./: .gitmodules  CMakeLists.txt  CMakePresets.json
data/shaders/sampler/: pix.hlsl  pix.spv  vert.hlsl
data/shaders/simple/: pix.hlsl  pix.spv  vert.hlsl
data/shaders/transform/: pix.hlsl  pix.spv  vert.hlsl  vert.spv
include/: main_window.h  rendering_iface.h  window_descriptor.h
include/common/: core_defs.h  dynamic_library.h  logger.h
include/interfaces/: i_rendering_driver.h
include/rel/: camera.h  data_blob.h  enums.h  hlsl_compiler.h  math.h  structs.h  tables.h  win_desc.h
include/util/: not_null.h  range_helpers.h  ref_counter.h  ref_ptr.h
include/utils/: dynamic_library.h  print.h  range_helpers.h
src/app3d/: image_loader.cpp  image_loader.h  main.cpp  model_loader.cpp  model_loader.h
src/common/: CMakeLists.txt  dynamic_library.cpp  logger.cpp
src/d3d12/: CMakeLists.txt  buffer.cpp  buffer.h  d3d12_api.h  d3d12_logger.cpp  d3d12_logger.h  descriptor_set.cpp  descriptor_set.h  dev_queue.cpp  dev_queue.h  device.cpp  device.h  fence.cpp  fence.h  frame_image_provider.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  pipeline_layout.h  render_target.cpp  render_target.h  rendering_driver.cpp  rendering_driver.h  sampler.cpp  sampler.h  shader_module.cpp  shader_module.h  surface.cpp  surface.h  swap_chain.cpp  swap_chain.h  tables.h  texture.cpp  texture.h  wrappers.h
src/platform/win32/: main_window_win32.cpp
src/platform/xcb/: main_window_xcb.cpp
src/rel/: CMakeLists.txt  hlsl_compiler.cpp  tables.cpp
src/utils/: CMakeLists.txt  dynamic_library.cpp  logger.cpp  print.cpp
src/vulkan/: CMakeLists.txt  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  descriptor_set.cpp  descriptor_set.h  dev_queue.cpp  dev_queue.h  device.cpp  device.h  enum_tables.cpp  enum_tables.h  frame_image_provider.h  image_provider.h  object_destroyer.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  pipeline_layout.h  render_target.cpp  render_target.h  rendering_driver.cpp  rendering_driver.h  sampler.cpp  sampler.h  shader_module.cpp  shader_module.h  surface.cpp  surface.h  swap_chain.cpp  swap_chain.h  tables.cpp  tables.h  texture.cpp  texture.h  vma_impl.cpp  vulkan_api.cpp  vulkan_api.h  vulkan_function_list.inl  (+3 more)
